force-app/main/default/objects/RW_Runwal_Event__c/RW_Runwal_Event__c.object-meta.xml
<CustomObject>
    <label>Runwal Event</label>
    <nameField>
        <label>Runwal Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Runwal Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>