force-app/main/default/objects/RW_Runwal_Event__c/fields/RW_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>