force-app/main/default/objects/RW_Runwal_Event__c/fields/RW_Event_Details__c.field-meta.xml
<CustomField>
    <fullName>RW_Event_Details__c</fullName>
    <label>Event Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>