force-app/main/default/objects/RW_Runwal_Event__c/fields/RW_Scroller_Subject__c.field-meta.xml
<CustomField>
    <fullName>RW_Scroller_Subject__c</fullName>
    <label>Scroller Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>