force-app/main/default/objects/RW_Runwal_Event__c/fields/RW_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>RW_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>