force-app/main/default/objects/RW_Runwal_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RW_Scroller_Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>